eks/deploymnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app-api-deployment
  labels:
    app: fitness-app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitness-app-api
  template:
    metadata:
      labels:
        app: fitness-app-api
    spec:
      containers:
        - name: fitness-app-api
          image: 207946321902.dkr.ecr.eu-west-2.amazonaws.com/myfitnesapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
