eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitness-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "fitness-app-api.net"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: fitness-app-api-service
              port:
                number: 80
  tls:
  - hosts:
    - fitness-app-api.net 
    secretName: fitness-app-api-cert
